--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/cocoa-eh"]
 	path = themes/cocoa-eh
 	url = https://github.com/fuegowolf/cocoa-eh-hugo-theme.git
+[submodule "public"]
+	path = public
+	url = https://github.com/terracotaPie/terracotaPie.github.io.git
+	branch = master
