Fix gh-pages deployment

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com/"
+baseurl = "https://terracotapie.github.io/"
 theme = "cocoa-eh"
 builddrafts = true
 canonifyurls = true
@@ -18,7 +18,7 @@ blog = "blog/:slug/"
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
 description = "Example blog"
-copyright = "Copyright © 2015 Timur Borkhodoev"
+copyright = "Copyright © 2017 Timur Borkhodoev"
 logofile = "img/logo.png"
 faviconfile = "img/logo.png"
 highlightjs = true
@@ -43,5 +43,5 @@ background_dark = "#282a36"
 code = "#87a5d2"
 type = "#97d28b"
 special = "#ffcb8d"
-value = "#96c2d7"
+vanankealue = "#96c2d7"
 statement = "#ff8e91"
